--- a/resume_generator/requirements.txt
+++ b/resume_generator/requirements.txt
@@ -1,3 +1,12 @@
+asgiref==3.8.1
+certifi==2024.8.30
+charset-normalizer==3.4.0
+Django==4.2.16
+idna==3.10
+Jinja2==3.1.4
+MarkupSafe==3.0.2
 pdfkit==1.0.0
-jinja2==3.1.4
-django==4.2.16
+pillow==11.0.0
+requests==2.32.3
+sqlparse==0.5.1
+urllib3==2.2.3
